# JobsColombia

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  analisis_resultados.py  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  security.yml  tests.yml
analisis_output/: ANALISIS.md  estadisticas.json
src/: config.py  scoring.py  scraping.py  utils.py  utils_proxies.py
src/jobscolombia/: __init__.py  config.py  logger.py  scoring.py  scraping.py  utils.py  utils_proxies.py
src/jobscolombia/scrapers/: __init__.py  base.py  computrabajo.py  elempleo.py  mitrabajo.py
src/scrapers/: __init__.py  base.py  computrabajo.py  elempleo.py  mitrabajo.py
tests/: test_computrabajo.py  test_elempleo.py  test_logger.py  test_main.py  test_mitrabajo.py  test_scoring.py  test_utils.py  test_utils_proxies.py
