[project]
name = "jobs"
version = "0.1.0"
description = "Job scraping tool that collects listings from LinkedIn/Indeed, scores and ranks them"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "TechJobs Colombia" }
]
homepage = "https://github.com/CristianMz21/JobsColombia"
repository = "https://github.com/CristianMz21/JobsColombia"
dependencies = [
    "pandas",
    "jobspy",
    "nest_asyncio",
    "requests",
    "scrapling[fetchers]>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/CristianMz21/JobsColombia"
Repository = "https://github.com/CristianMz21/JobsColombia"
Issues = "https://github.com/CristianMz21/JobsColombia/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
