[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobscolombia"
version = "0.2.0"
description = "Tech job scoring and utilities for Colombia"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "TechJobs Colombia", email = "contact@jobscolombia.com" }
]
homepage = "https://github.com/CristianMz21/JobsColombia"
repository = "https://github.com/CristianMz21/JobsColombia"
keywords = ["jobs", "colombia", "scoring", "tech", "career"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "mypy",
    "bandit",
    "safety",
]

[project.urls]
Homepage = "https://github.com/CristianMz21/JobsColombia"
Repository = "https://github.com/CristianMz21/JobsColombia"
Issues = "https://github.com/CristianMz21/JobsColombia/issues"

[tool.hatchling.build.targets.wheel]
packages = ["src.jobscolombia"]

[tool.hatchling.build.targets.sdist]
include = ["src/jobscolombia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/jobscolombia"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src.jobscolombia"]
